--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+fieldset#search{
+    background: #F1F1F1;
+    border: 0 none;
+    width: 110.25%;
+    border-bottom: 1px solid #CCC;
+}
+.inline{
+    display: flex;
+}
+.left{
+    display: flex;
+    float: left;
+    margin-right: 133px;
+}
+.right{
+    display: flex;
+    float: left;
+}
+html, body { height: 100%;}
+body { margin: 0; font-family: Roboto, 'Helvetica Neue', sans-serif;}
